fix(bs-templates): better spacing between confirmation message and button

--- a/public/bs-templates/templates/modal/_export.scss
+++ b/public/bs-templates/templates/modal/_export.scss
@@ -185,3 +185,7 @@ a.calendars-link {
     color: $oa-white;
   }
 }
+
+#event .detail-item p.confirmation-message {
+  margin: 0 0 20px 0;
+}
